[gd_scene load_steps=11 format=3 uid="uid://dla4koheqh3xc"]

[ext_resource type="Script" path="res://Scripts/Entities/Interactables/switch.gd" id="1_2mh27"]
[ext_resource type="Texture2D" uid="uid://csd4atqh365f1" path="res://Art/Entities/Objects/switch.png" id="1_yjxcx"]
[ext_resource type="AudioStream" uid="uid://bwrmwdo7tn5hm" path="res://Audio/SFX/mixkit-electric-switch-1808.ogg" id="2_limgk"]
[ext_resource type="Texture2D" uid="uid://c8h6yohlpebqt" path="res://Art/Entities/Objects/switch_on.png" id="3_rlr23"]
[ext_resource type="PackedScene" uid="uid://c7q5b0divy5kt" path="res://Scenes/Entities/Interactables/interaction.tscn" id="4_0d6bx"]
[ext_resource type="Script" path="res://Scripts/Events/event_trigger.gd" id="4_xrcyk"]
[ext_resource type="Script" path="res://Scripts/Events/bool_event_trigger.gd" id="5_ybx64"]
[ext_resource type="Texture2D" uid="uid://c8qdkj16gxrtc" path="res://Art/Environment/light.png" id="8_y843t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5ylpp"]
radius = 30.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3vfcr"]
radius = 15.0

[node name="Switch" type="StaticBody2D" node_paths=PackedStringArray("sprite", "light", "interaction_area", "event_trigger", "bool_event_trigger")]
z_index = 2
collision_layer = 128
collision_mask = 152
script = ExtResource("1_2mh27")
sfx = ExtResource("2_limgk")
sprite = NodePath("Sprite2D")
light = NodePath("Light")
off_texture = ExtResource("1_yjxcx")
on_texture = ExtResource("3_rlr23")
interaction_area = NodePath("InteractionArea")
event_trigger = NodePath("EventTrigger")
bool_event_trigger = NodePath("BoolEventTrigger")

[node name="InteractionArea" parent="." instance=ExtResource("4_0d6bx")]
action_name = "Press"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_5ylpp")
debug_color = Color(0, 0.651049, 0.0416142, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_yjxcx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3vfcr")

[node name="EventTrigger" type="Node" parent="."]
script = ExtResource("4_xrcyk")

[node name="BoolEventTrigger" type="Node" parent="."]
script = ExtResource("5_ybx64")

[node name="Light" type="PointLight2D" parent="."]
color = Color(0, 1, 0, 1)
energy = 0.5
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 50.0
texture = ExtResource("8_y843t")
texture_scale = 0.3
